New dev deploy from 18/11/2020

--- a/index.html
+++ b/index.html
@@ -108,5 +108,5 @@
       <img height="1" width="1" style="display:none;" alt="" src="https://px.ads.linkedin.com/collect/?pid=3031001&fmt=gif" />
     </noscript>
   </body>
-  <script type="text/javascript" src="/main.bundle.js"></script>
+  <script type="text/javascript" src="main.bundle.js"></script>
 </html>
