New dev deploy from 25/11/2020

--- a/index.html
+++ b/index.html
@@ -67,5 +67,5 @@
     </noscript>
     <div id="root"></div>
   </body>
-  <script type="text/javascript" src="js/main.bundle.js"></script>
+  <script type="text/javascript" src="/js/main.bundle.js"></script>
 </html>
