--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <script src="https://api-maps.yandex.ru/2.1/?lang=en_US&amp;apikey=b3a56a64-bc40-48ae-a5f1-8d14943692b0" type="text/javascript"></script>
     <title>Native Robotics</title>
-    <link rel="stylesheet" type="text/css" href="main.css?version=0.1" />
+    <link rel="stylesheet" type="text/css" href="/styles/main.css?version=0.1" />
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
