--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <script src="https://api-maps.yandex.ru/2.1/?lang=en_US&amp;apikey=b3a56a64-bc40-48ae-a5f1-8d14943692b0" type="text/javascript"></script>
     <title>Native Robotics</title>
     <link rel="stylesheet" type="text/css" href="/styles/main.css" />
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1_5iRUBoj2zt6O9lfEh9r5sxEZfcoxFY&map_ids=130ede963d80b374&libraries=&v=weekly&region=US&language=en"
+      defer
+    ></script>
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
