--- a/demo/experimental.html
+++ b/demo/experimental.html
@@ -3,30 +3,96 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>OmniPack Demo</title>
+    <title>Expo</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
     <link rel="stylesheet" href="../TemplateData/style.css">
     <link rel="stylesheet" href="../responsiveMinimalTemplateStyles.css?v=2"/>
-    <script>
-        window.location.replace('/demo/omni-fit')
-    </script>
-    <script src="https://nativeroboticsstorage.blob.core.windows.net/builds/OmniPack/UnityLoader.js"></script>
+    <script src="https://nativeroboticsstorage.blob.core.windows.net/builds/OmniPack2019/UnityLoader.js"></script>
     <script src="../TemplateData/UnityProgress.js"></script>
-    <script src="../responsiveMinimalTemplateLoader.js"></script>
     <script>
-        instantiateUnity('https://nativeroboticsstorage.blob.core.windows.net/builds/OmniPack/OmniPackWebGL.json');
+        var unityInstance = UnityLoader.instantiate("gameContainer", "https://nativeroboticsstorage.blob.core.windows.net/builds/OmniPack2019/OmniPackWebGL.json", {onProgress: UnityProgress});
+        var scaleToFit;
+        try {
+            scaleToFit = !!JSON.parse("%UNITY_CUSTOM_SCALE_TO_FIT%");
+        } catch (e) {
+            scaleToFit = true;
+        }
+
+        function onResize() {
+            var canvas = unityInstance.Module.canvas;
+            var container = unityInstance.container;
+            var w;
+            var h;
+
+            if (scaleToFit) {
+                w = window.innerWidth;
+                h = window.innerHeight - 48;
+
+                var r = 600 / 960;
+
+                if (w * r > window.innerHeight) {
+                    w = Math.min(w, Math.ceil(h / r));
+                }
+                h = Math.floor(w * r);
+            } else {
+                w = 960;
+                h = 600;
+            }
+
+            container.style.width = canvas.style.width = w + "px";
+            container.style.height = canvas.style.height = h + "px";
+            container.style.top = Math.floor((window.innerHeight - h - 48) / 2) + "px";
+            container.style.left = Math.floor((window.innerWidth - w) / 2) + "px";
+        }
+        window.addEventListener('resize', onResize);
     </script>
+    <style>
+        html,
+        body {
+            background: #000;
+            /* background: %UNITY_CUSTOM_BACKGROUND%; */
+            width: 100%;
+            height: 100%;
+            overflow: visible;
+            padding: 0;
+            margin: 0;
+        }
+
+        div#gameContainer {
+            background: transparent !important;
+            position: absolute;
+            /*max-height: calc(100% - 48px);*/
+        }
+
+        div#gameContainer canvas {
+            position: absolute;
+            /*max-height: calc(100% - 48px);*/
+        }
+
+        
+        div#gameContainer[data-pixelated='true'] canvas {
+            image-rendering: optimizeSpeed;
+            image-rendering: -webkit-crisp-edges;
+            image-rendering: -moz-crisp-edges;
+            image-rendering: -o-crisp-edges;
+            image-rendering: crisp-edges;
+            image-rendering: -webkit-optimize-contrast;
+            image-rendering: optimize-contrast;
+            image-rendering: pixelated;
+            -ms-interpolation-mode: nearest-neighbor;
+        }
+    </style>
 </head>
-<body>
+<body onload="onResize();">
 <div class="webgl-content">
     <div id="gameContainer" style="width: 100vw; height: 90vh"></div>
     <div class="footer">
         <div class="nr-logo">
             <object type="image/svg+xml" data="../logo-webgl.svg"></object>
         </div>
-        <div class="title">OmniPack</div>
+        <div class="title">OmniFit | Expo</div>
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)">
             <div class="fullscreen-icon">
                 <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
